--- a/src/locales/translation/zh.json
+++ b/src/locales/translation/zh.json
@@ -6,5 +6,13 @@
   "403": "403",
   "404": "404",
   "500": "500",
-  "login": "登录"
+  "login": "登录",
+  "table": "表格",
+  "scene": "场景",
+  "advancedScreening": "高级筛选",
+  "screeningCondition": "筛选条件",
+  "cancelText": "取消",
+  "confirmText": "确认",
+  "selectPlaceholder": "请选择",
+  "inputPlaceholder": "请输入"
 }
