--- a/src/locales/translation/en.json
+++ b/src/locales/translation/en.json
@@ -2,6 +2,9 @@
   "home": "Home",
   "about": "About",
   "exception": "Exception",
+  "exception1": "Exception1",
+  "home2": "Home2",
+  "exception2": "Exception2",
   "403": "403",
   "404": "404",
   "500": "500",
