--- a/src/locales/translation/zh.json
+++ b/src/locales/translation/zh.json
@@ -3,6 +3,8 @@
   "about": "关于",
   "exception": "异常",
   "exception1": "异常1",
+  "home2": "主页2",
+  "exception2": "异常2",
   "403": "403",
   "404": "404",
   "500": "500",
