--- a/src/locales/translation/en.json
+++ b/src/locales/translation/en.json
@@ -18,5 +18,6 @@
   "selectPlaceholder": "SelectPlaceholder",
   "inputPlaceholder": "InputPlaceholder",
   "form": "Form",
-  "coldChainWeb": "ColdChainWeb"
+  "coldChainWeb": "ColdChainWeb",
+  "extendedPage": "ExtendedPage"
 }
