--- a/src/locales/translation/zh.json
+++ b/src/locales/translation/zh.json
@@ -18,5 +18,6 @@
   "selectPlaceholder": "请选择",
   "inputPlaceholder": "请输入",
   "form": "表单",
-  "coldChainWeb": "冷链云"
+  "coldChainWeb": "冷链云",
+  "extendedPage": "扩展"
 }
