feat: 表格抽离&插件化

--- a/src/locales/translation/en.json
+++ b/src/locales/translation/en.json
@@ -19,5 +19,6 @@
   "inputPlaceholder": "InputPlaceholder",
   "form": "Form",
   "coldChainWeb": "ColdChainWeb",
-  "extendedPage": "ExtendedPage"
+  "extendedPage": "ExtendedPage",
+  "pluginTextPage": "PluginTextPage"
 }
