--- a/src/locales/translation/zh.json
+++ b/src/locales/translation/zh.json
@@ -19,5 +19,6 @@
   "inputPlaceholder": "请输入",
   "form": "表单",
   "coldChainWeb": "冷链云",
-  "extendedPage": "扩展"
+  "extendedPage": "扩展",
+  "pluginTextPage": "插件"
 }
